fix problems of code review: 1.use ES6 class  2.use undefined rightly 3.bugfix-1: model may overlap when arrange model  4.bugfix-2: cloned model lost "rotation&scale"

--- a/src/web/widgets/ThreeDPrintingVisualizer/styles.styl
+++ b/src/web/widgets/ThreeDPrintingVisualizer/styles.styl
@@ -373,6 +373,7 @@ $visualizer-padding = 10px
     border-radius: $border-radius;
 
     &--option {
+        display: block;
         padding: 6px 10px 5px 10px;
         min-width: 160px;
         cursor: default;
